#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
JF-2009-10-28-0: Enhancem.:  Testsuite test for RFI 6684887 jsv part
                 Review:     EB

CR-2009-10-28-0: Enhancemn.  Added JSV-core-binding related tests scenarios
                 Review:     DG

CR-2009-10-27-1: Enhancem.:  Added first prototype for Slotwise Suspend on 
                             Subordinate test
                 Review:     DG

RH-2009-10-27-0: Bugfix:     Hedeby:
                             o bug in create_max_pending_jobs_slo fixed (job filters
                               did not work)
                             o bug in hedeby issue 566, setup SLO for spare_pool with 
                               update interval
                             o cleanup of maxPendingJobs/noMatch test
                 Enhancem.:  get_resource_info(_opt) allows filtering
                 Belongs to: RH-2009-10-26-0
                 Review:     TB

CR-2009-10-27-0: Cleanup:    enhanced timeout allowed for deleting temporary 
                             generated files

CR-2009-10-26-0: Bugfix:     fixed drmaaj test
                 Review:     DG

RH-2009-10-26-0: Enhancem:   Hedeby: o New use case test cloud_preheat
                                     o Opt methods for create_..._slo
                 Enhancem:   New method submit_sleeper_job in sge_procedures.tcl
                 Review:     TB

MG-2009-10-26-0: Bugfix:     Now its possible to build cloud adapter with SDM ts
                 Review:     RH

CR-2009-10-26-0: Bugfix:     o fixed host aliases test
                 Review:     LP
